mgr/dashboard: Fix layout issues in UI
Improve the CSS3 selectors and use the margin-left values from 'btn-toolbar' Bootstrap.

(cherry picked from commit 9f44dc387a6d4567118cc1d7adfe2b72b4e96cfa)

--- a/src/pybind/mgr/dashboard/frontend/src/app/shared/datatable/table/table.component.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/app/shared/datatable/table/table.component.scss
@@ -205,6 +205,10 @@
     }
     .datatable-pager .pager {
       margin-right: 5px !important;
+      & li:not(:first-child) {
+        /** Add space between buttons */
+        margin-left: 3px;
+      }
       & li > a, & li > span {
         border-radius: 3px;
       }
